--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -19,8 +19,9 @@ jobs:
       env:
         API_KEY: ${{ secrets.API_KEY }}
       run: |
-        pip3 install install pandas google-api-python-client pytz
+        pip3 install install pandas google-api-python-client pytz plotly
         python3 scrape.py
+        python3 gen_graphs.py
     - uses: mikeal/publish-to-github-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub sets this for you
