--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -19,7 +19,7 @@ jobs:
       env:
         API_KEY: ${{ secrets.API_KEY }}
       run: |
-        sudo apt-get install python3-setuptools
+        pip3 install -U pip setuptools
         pip3 install install pandas google-api-python-client pytz plotly
         python3 scrape.py
         python3 gen_graphs.py
